--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "theme_color": "#ffffff",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/1048/1048953.png",
+      "src": "icon.png", 
       "sizes": "512x512",
       "type": "image/png"
     }
